# u-django-first-app

./: .gitignore  README.md  pyproject.toml
config/: middleware.py  settings.py  urls.py
first_app/: urls.py  views.py
form_app/: apps.py  forms.py  models.py  urls.py  views.py
form_app/migrations/: 0001_initial.py
form_app/templates/form_app/: index.html
