[tool.poetry]
name = "udemy-django-first-app"
version = "0.1.0"
description = ""
authors = ["wtkn25 <atrastar72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
